--- a/resources/template.html
+++ b/resources/template.html
@@ -33,7 +33,7 @@
   <aside>
     <a href="">
       <figure>
-        <img src="/assets/images/image.png" width="360" height="80" />
+        <img src="/assets/images/image.png" width="360" height="80" alt="Description of the image" />
         <figcaption>Caption for the image</figcaption>
       </figure>
       <p>
